# decoder

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
decoder/: __init__.py  __main__.py  cli.py
decoder/core/: __init__.py  exceptions.py  indexer.py  models.py
decoder/core/graph/: __init__.py  analysis.py  base.py  loader.py  models.py  pathfinding.py  traversal.py
decoder/core/storage/: __init__.py  edges.py  files.py  repository.py  symbols.py
decoder/languages/: __init__.py  base.py  models.py  python.py
decoder/mcp/: __init__.py  __main__.py  server.py
mcp-server-decoder/: README.md  pyproject.toml
mcp-server-decoder/mcp_server_decoder/: __init__.py
tests/: __init__.py
tests/integration/: test_integration.py
tests/unit/: test_errors.py  test_graph.py
vscode-decoder/: package.json  pnpm-lock.yaml  tsconfig.json
vscode-decoder/src/: callTreeProvider.ts  decoder.ts  extension.ts  tracePlayer.ts  types.ts
