[project]
name = "decoder-graph"
version = "0.1.0"
description = "Static call graph traversal for Python codebases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
decoder = "decoder.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["decoder"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
