[project]
name = "mcp-server-decoder"
version = "0.1.0"
description = "MCP server for Decoder - static call graph analysis for Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "decoder-graph>=0.1.0",
]

[project.scripts]
mcp-server-decoder = "mcp_server_decoder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server_decoder"]
